--- a/facet_doc.html
+++ b/facet_doc.html
@@ -16,23 +16,23 @@
 <div id="PG">
 <div id="HD">
   <a href="http://www.openlinksw.com" class="logo">
-    <img id="opl_logo" src="/fct/images/openlinklogo_wstrap_2008_no_motto.png" alt="OpenLink Software"/>
+    <img id="opl_logo" src="/fct/images/openlink150_on_blue.gif" alt="OpenLink Software"/>
   </a>
-  <h1>Faceted Data Explorer <span class="descr">- A Server-Hosted Faceted Data Browser</span></h1>
 </div><!-- #HD -->
 <div id="MD">
   <div class="doc_ctr">
-    <h1>Documentation</h1>
+    <h1>OpenLink Finder Documentation</h1>
     <p></p>
-    <h2>Results Ranking</h2>
-    <p>Results are sorted on a combination of text match score and graph link structure.
-       The text score is proportional to the frequency of the search terms in the match and if many terms are present, 
-       the score is increased if the different terms occur in close proximity.</p>
-    <p>Additionally, all URIs have a score based on  how frequently they are referenced in properties of other URIs.  
-       The score is increased in function of the score of the referencing URI.  This is similar to result ranking for 
-       web search engines. When a list of URI's is shown, for example when they occur as property values, they are 
-       sorted by the URI's score since there is no text criterion on them.  The details of how scores vary in function 
-       of referencing properties, how distance affects score etc will vary as we test different options.</p> 
+    <h2>Text Search</h2>
+    <p>Enter a text pattern to look for. Finder will show a listing of entities with the text occurring in any literal property value or label. You may then continue to refine your search by filtering by type, property value, etc.</p>
+    <h2>Entity URI (ID) Lookup</h2>
+    <p>You can lookup an Entity URI using the autocomplete feature which performs lookups as you type. The OpenLink Finder recognizes some well-known namespace prefixes. For example: "dbpedia:"</p>
+    <h2>Results Order &amp; Ranking</h2>
+    <p>On some listings, results are sorted using a combination of text match score and entity-attribute-value link coefficients. Thus, a small indicator graphic (horizontal bars in leftmost column) is used to unveil metrics for both rankings per entity; the top bar indicates the text score while the bottom covers the entity ranking. Hovering on either will reveal the actual value.</p>
+    <h3>Text Scores</h3>
+    <p>These are proportional to the frequency of the search terms in the match and if many terms are present, the score weight is increased by a proximity factor.
+    <h3>Entity Rank</h3>
+    <p>Entity matches are ranked based on how frequently they are referenced by other entities. Rankings are increased as a function of the score of the referencing entity.</p> 
     <h2>More Information</h2>
     <ul>
       <li><a href="http://docs.openlinksw.com/virtuoso/">OpenLink Virtuoso Documentation Main Page</a></li>
