--- a/facet_doc.html
+++ b/facet_doc.html
@@ -33,6 +33,18 @@
     <p>These are proportional to the frequency of the search terms in the match and if many terms are present, the score weight is increased by a proximity factor.
     <h3>Entity Rank</h3>
     <p>Entity matches are ranked based on how frequently they are referenced by other entities. Rankings are increased as a function of the score of the referencing entity.</p> 
+<a name="timeout"/><h2>Timeouts</h2>
+    <p>The Virtuoso 6.x engine includes a new "Anytime Query" feature that enables the optional use of a configurable 
+       response time threshold (timeout) when executing queries over large
+       datasets. This feature protects against deliberate or inadvertent denial-of-service style resource-hogging 
+       that can arise from badly written or complex queries. 
+       When enabled, this feature lets you to set hard limit for resource usage per query associated with 
+       unauthenticated users. Queries execute until the response time limit threshold is reached, and, if partial 
+       results are available, they are returned with additional result set diagnostics flagging the partial nature 
+       of the result set. All query handling is partitioned thereby protecting against cross-client resource contention.</p>
+    <p><i>Virtuoso Entity Finder</i> currently enforces a 20 second hard time limit for queries. Each query is first run 
+       with a 2 second timeout - if only a partial result or no results are received, the user is prompted to retry 
+       with double the previous time limit until the hard limit is reached.</p>
     <h2>More Information</h2>
     <ul>
       <li><a href="http://docs.openlinksw.com/virtuoso/">OpenLink Virtuoso Documentation Main Page</a></li>
