Changed name of the service and all titles: "OpenLink Entity Finder". Changed &nbsp; to the unicode en space to keep XML validator happy.

--- a/facet_doc.html
+++ b/facet_doc.html
@@ -5,7 +5,7 @@
 <?vsp set http_charset='utf-8'; ?>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<title>OpenLink Faceted Data Browser - Documentation</title>
+<title>OpenLink Entity Finder - Documentation</title>
 <link rel="stylesheet" media="screen" type="text/css" href="styles/default.css"/>
 <script type="text/javascript" >
     var featureList=["map", "combolist"];
@@ -21,7 +21,7 @@
 </div><!-- #HD -->
 <div id="MD">
   <div class="doc_ctr">
-    <h1>OpenLink Finder Documentation</h1>
+    <h1>OpenLink Entity Finder Documentation</h1>
     <p></p>
     <h2>Text Search</h2>
     <p>Enter a text pattern to look for. Finder will show a listing of entities with the text occurring in any literal property value or label. You may then continue to refine your search by filtering by type, property value, etc.</p>
