--- a/facet_doc.html
+++ b/facet_doc.html
@@ -14,26 +14,48 @@
 </head>
 <body>
 <div id="PG">
-<div id="HD">
-  <a href="http://www.openlinksw.com" class="logo">
-    <img id="opl_logo" src="/fct/images/openlink150_on_blue.gif" alt="OpenLink Software"/>
-  </a>
-</div><!-- #HD -->
+  <div id="HD">
+    <div id="hd_l">
+      <h1>
+        <div id="logo">
+          <a href="http://www.openlinksw.com">
+            <img src="/fct/images/openlink_site_logo.png" 
+                 alt="OpenLink Software"/>
+          </a>
+        </div>
+      </h1>
+    <div id="homelink"></div>
+  </div> <!-- hd_l -->
+  <div id="hd_r">
+    <a href="http://data.openlinksw.com/about/html/http://data.openlinksw.com/oplweb/product_family/virtuoso" 
+       title="OpenLink Virtuoso">
+      <img class="powered_by" src="/fct/images/virt_power_no_border.png" alt="Powered by OpenLink Virtuoso"/>
+    </a>
+  </div> <!-- hd_r -->
+</div> <!-- #HD -->
 <div id="MD">
   <div class="doc_ctr">
     <h1>OpenLink Entity Finder Documentation</h1>
     <p></p>
     <h2>Text Search</h2>
-    <p>Enter a text pattern to look for. Finder will show a listing of entities with the text occurring in any literal property value or label. You may then continue to refine your search by filtering by type, property value, etc.</p>
+    <p>Enter a text pattern to look for. Finder will show a listing of entities with the text 
+    occurring in any literal property value or label. You may then continue to refine your search 
+    by filtering by type, property value, etc.</p>
     <h2>Entity URI (ID) Lookup</h2>
-    <p>You can lookup an Entity URI using the autocomplete feature which performs lookups as you type. The OpenLink Finder recognizes some well-known namespace prefixes. For example: "dbpedia:"</p>
+    <p>You can lookup an Entity URI using the autocomplete feature which performs lookups as you type. 
+       The OpenLink Finder recognizes some well-known namespace prefixes. For example: "dbpedia:"</p>
     <h2>Results Order &amp; Ranking</h2>
-    <p>On some listings, results are sorted using a combination of text match score and entity-attribute-value link coefficients. Thus, a small indicator graphic (horizontal bars in leftmost column) is used to unveil metrics for both rankings per entity; the top bar indicates the text score while the bottom covers the entity ranking. Hovering on either will reveal the actual value.</p>
+    <p>On some listings, results are sorted using a combination of text match score and entity-attribute-value 
+       link coefficients. Thus, a small indicator graphic (horizontal bars in leftmost column) is used to unveil 
+       metrics for both rankings per entity; the top bar indicates the text score while the bottom covers the entity 
+       ranking. Hovering on either will reveal the actual value.</p>
     <h3>Text Scores</h3>
-    <p>These are proportional to the frequency of the search terms in the match and if many terms are present, the score weight is increased by a proximity factor.
+    <p>These are proportional to the frequency of the search terms in the match and if many terms are present, 
+       the score weight is increased by a proximity factor.
     <h3>Entity Rank</h3>
-    <p>Entity matches are ranked based on how frequently they are referenced by other entities. Rankings are increased as a function of the score of the referencing entity.</p> 
-<a name="timeout"/><h2>Timeouts</h2>
+    <p>Entity matches are ranked based on how frequently they are referenced by other entities. Rankings 
+       are increased as a function of the score of the referencing entity.</p> 
+    <a name="timeout"></a><h2>Timeouts</h2>
     <p>The Virtuoso 6.x engine includes a new "Anytime Query" feature that enables the optional use of a configurable 
        response time threshold (timeout) when executing queries over large
        datasets. This feature protects against deliberate or inadvertent denial-of-service style resource-hogging 
@@ -45,6 +67,10 @@
     <p><i>Virtuoso Entity Finder</i> currently enforces a 20 second hard time limit for queries. Each query is first run 
        with a 2 second timeout - if only a partial result or no results are received, the user is prompted to retry 
        with double the previous time limit until the hard limit is reached.</p>
+    <h2>Available datasets</h2>
+    <p>
+      The <a href="/void/Dataset">VoiD graph</a> contains information on loaded datasets and their content.
+    </p>
     <h2>More Information</h2>
     <ul>
       <li><a href="http://docs.openlinksw.com/virtuoso/">OpenLink Virtuoso Documentation Main Page</a></li>
