--- a/facet_doc.html
+++ b/facet_doc.html
@@ -62,8 +62,8 @@
     <p></p>
     <h2>Text Search</h2>
     <p>Enter a text pattern to look for. Finder will show a listing of entities with the text 
-    occurring in any literal property value or label. You may then continue to refine your search 
-    by filtering by type, property value, etc.</p>
+       occurring in any literal property value or label. You may then continue to refine your search 
+       by filtering by type, property value, etc.</p>
     <h2>Entity URI (ID) Lookup</h2>
     <p>You can lookup an Entity URI using the autocomplete feature which performs lookups as you type. 
        The OpenLink Finder recognizes some well-known namespace prefixes. For example: "dbpedia:"</p>
@@ -86,9 +86,10 @@
        When enabled, this feature lets you to set hard limit for resource usage per query associated with 
        unauthenticated users. Queries execute until the response time limit threshold is reached, and, if partial 
        results are available, they are returned with additional result set diagnostics flagging the partial nature 
-       of the result set. All query handling is partitioned thereby protecting against cross-client resource contention.</p>
-    <p><i>Virtuoso Entity Finder</i> currently enforces a 20 second hard time limit for queries. Each query is first run 
-       with a 2 second timeout - if only a partial result or no results are received, the user is prompted to retry 
+       of the result set. All query handling is partitioned thereby protecting against cross-client resource 
+       contention.</p>
+    <p><i>Virtuoso Entity Finder</i> currently enforces a 20 second hard time limit for queries. Each query is first 
+       run with a 2 second timeout - if only a partial result or no results are received, the user is prompted to retry 
        with double the previous time limit until the hard limit is reached.</p>
     <h2>Available datasets</h2>
     <p>
