--- a/install.html
+++ b/install.html
@@ -1,8 +1,8 @@
 <html>
     <body>
-	<h1>Installation dependancy failed</h1>
-	<p>The installation of the Faceted Browser failed because of incompatible inde layout on RDF_QUAD table.</p>
-	<p>In order to install this package you need to exeute following script:</p>
+	<h1>Installation dependency failed</h1>
+	<p>This installation of the Faceted Browser cannot currently be used due to an incompatible layout of RDF_QUAD table.</p>
+	<p>In order to enable this package you need to execute following script:</p>
 	<pre>
 drop index RDF_QUAD_OGPS;
 checkpoint;
@@ -20,6 +20,6 @@ create bitmap index RDF_QUAD_POGS on RDF_QUAD (P, O, G, S) partition (O varchar 
 create bitmap index RDF_QUAD_GPOS on RDF_QUAD (G, P, O, S) partition (O varchar (-1, 0hexffff));
 
 checkpoint;
-</pre>
+	</pre>
     </body>
 </html>
