Added simple and maintainable demo queries page for BBC. registry_set ('fct_site', 'bbc') to make visible.

--- a/facet_doc.html
+++ b/facet_doc.html
@@ -100,7 +100,10 @@
       <li><a href="http://docs.openlinksw.com/virtuoso/">OpenLink Virtuoso Documentation Main Page</a></li>
       <li><a href="http://virtuoso.openlinksw.com/dataspace/dav/wiki/Main/VirtuosoFacetsWebService">Virtuoso Facets Web Service Documentation</a></li>
     </ul>
-  </div>
+    <p>
+      <a href="javascript:history.back()">Go Back</a>
+    </p>
+  </div> <!-- .doc_ctr -->
 </div><!-- #MD -->
 <div id="FT">
   <a href="http://virtuoso.openlinksw.com/"><img src="/fct/images/virt_power_no_border.png" alt="Powered by OpenLink Virtuoso"/></a>
