Tweaked text re. OpenSearch.

--- a/facet_doc.html
+++ b/facet_doc.html
@@ -92,8 +92,9 @@
        if only a partial result or no results are received, the user is prompted to retry with double the previous time limit until 
        the hard limit is reached.</p>
     <h2>OpenSearch</h2>
-    <p>You can add this service as a search engine "plugin" in OpenSearch capable browsers. Just click on the "Search from browser" link on main search page, or use your browser's search engine management UI.</p>
-    <h3>Further reading</h3>
+    <p>You can add this service as a search engine plugin in OpenSearch capable browsers. You can do this in Firefox by using the pulldown
+    next to the search text input in Facet search main page.</p>
+    <h3>More Information</h3>
     <ul>
       <li><a href="http://www.opensearch.org">OpenSearch.org</a></li>
     </ul>
